v1.258.0: docs truth — the plan carries the baseline advance (#387)
plan.md gains the 2026-08-04 currency addendum at v1.257.0: the JDK 25
LTS + OpenJFX 26 baseline story (JEP 493 jmods lesson, the
Temurin-25-cannot-jlink lesson, the Zulu fix, the never-move
maven.compiler.target law with its update-center rationale, the
--list-modules corollary), the v1.256.0 JEP 472 native-access grant
with its installer-only-conf timing law and the two conf-rewrite
traps, the v1.252.0 TAP fix, and the v1.257.0 review's false-green
re-run find. The "Where the project stands" headline moves off the
fossil v1.208.0 to v1.257.0 and names the bundled runtime.

Docs only — no code changes.

Co-authored-by: Claude Fable 5 <noreply@anthropic.com>